# samaku

./: .gitignore  .gitmodules  Cargo.toml  README.md  WINDOWS_BUILD.md  build.rs  clippy.toml  rust-toolchain.toml
.github/actions/setup-linux-deps/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-windows-deps/: action.yml
.github/workflows/: ci.yml
benches/: event_track.rs  main.rs  measure.rs  nde.rs  vfr.rs
bestsource-sys/: Cargo.toml  build.rs  meson.build
bestsource-sys/src/: lib.rs
bestsource-sys/wrapper/: wrapper.cpp  wrapper.h
git_hooks/: pre-commit
libass-sys/: Cargo.toml  build.rs
libp2p-sys/: Cargo.toml  README.md  build.rs
libp2p-sys/src/: lib.rs
packaging/: build-appimage.sh  samaku.desktop
src/: action.rs  config.rs  history.rs  keyboard.rs  lib.rs  main.rs  menu.rs  message.rs  project.rs  style.rs  theme.rs  update.rs  version.rs
src/controller/: global.rs  mod.rs  playback.rs
src/controller/pane/: mod.rs  video.rs
src/controller/workers/: cpal_playback.rs  mod.rs  video_decoder.rs
src/io/: mod.rs  parse.rs
src/media/: audio.rs  frame.rs  index.rs  matroska.rs  mod.rs  motion.rs  subtitle.rs  video.rs
src/media/bindings/: ass.rs  bestsource.rs  ffms2.rs  mod.rs  mv.rs  vapoursynth.rs
src/media/default_scripts/: audio.py  prelude.py  video.py
src/model/: mod.rs  playback.rs  reticule.rs  select.rs  toast.rs
src/model/pane/: mod.rs  video.rs
src/nde/: graph.rs  mod.rs
src/nde/node/: clip.rs  gradient.rs  input.rs  mod.rs  motion_track.rs  output.rs  perspective.rs  positioning.rs  split.rs  style_basic.rs
src/nde/node/input/: mod.rs  perspective.rs  rectangle.rs
src/nde/tags/: bake.rs  emit.rs  lerp.rs  mod.rs  parse.rs  perspective.rs
src/nde/util/: measure.rs  mod.rs
src/pane/: grid.rs  mod.rs  node_editor.rs  style_editor.rs  template.rs.txt  text_editor.rs  timeline.rs  unassigned.rs  video.rs
src/resources/: mod.rs
src/subtitle/: ass.rs  compile.rs  emit.rs  event_track.rs  mod.rs  parse.rs  uu.rs
src/subtitle/import/: matroska.rs  mod.rs
src/view/: icons.rs  menu.rs  mod.rs  toast.rs
src/view/pane/: mod.rs  unassigned.rs  video.rs
src/view/widget/: blend_box.rs  border_above_container.rs  image_stack.rs  mod.rs  number_dragger.rs
src/workers/: cpal_playback.rs  indexer.rs  log_toasts.rs  mod.rs  progress_listener.rs  video_decoder.rs
test_files/: bake_edge_cases.ass  border_styles.ass  cube_av1.mkv  cube_h264.mkv  cube_sub_ass.mkv  duplicate_styles.ass  encoding_-1.ass  extra_sections.ass  invalid_number.ass  measure.ass  measure_template.ass  multiple_styles.ass  non_existent_font.ass  opaque_sections.ass  parse_edge_cases.ass  parse_warnings.ass  style_colours.ass  style_colours_zlib.mks  unmapped_chars.ass  vfrtest.mkv
tests/: libass_compare.rs  libass_parse_comparison.rs
tools/: bitmap_compare.html
vapoursynth/: aegisub_vs.py
