[package]
name = "samaku"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Node-based editor for typesetting of ASS subtitles"
repository = "https://github.com/meew0/samaku"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["ass", "subtitle"]
categories = ["multimedia"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# GUI
iced = { version = "0.14.0", features = [
    "lazy",
    "image",
    "advanced",
    "smol",
    "svg",
] }
iced_aw = { version = "0.13.1", features = ["menu", "selection_list"] }
iced_fonts = { version = "0.3.0", features = ["bootstrap"] }
iced_nodegraph = { git = "https://github.com/tuco86/iced_nodegraph.git", rev = "e4dd909680a1f668b6cbc0150d5c5c84cbe473c2" }
rfd = "0.15.4"
smol = "2.0"

# Media libraries
rustsynth-sys = { version = "0.5.0", features = [
    "vapoursynth-functions",
    "vsscript-functions",
] }
libass-sys = { version = "0.1.0", path = "libass-sys" }
bestsource-sys = { version = "0.1.0", path = "bestsource-sys" }
libmv-capi-sys = { git = "https://github.com/meew0/libmv-capi-sys.git" }
matroska-demuxer = "0.7"
cpal = "0.16"

# FFI utilities
libc = "0.2.175"
vsprintf = "2.0.0"
static_assertions = "1.1.0"

# Various data structures and utilities
regex = "1.11"
interavl = "0.3"
indexmap = "2.11"
fast-float2 = "0.2"

# dtolnay collection
thiserror = "2.0"
anyhow = "1.0"
inventory = "0.3.21"
dyn-clone = "1.0"

# Serialization & deserialization
serde = "1.0.219"
typetag = "0.2.20"
ciborium = "0.2.2"
data-encoding = "2.9"
data-encoding-macro = "0.1.18"
miniz_oxide = "0.8.9"

[dev-dependencies]

# Test dependencies
assert_matches2 = "0.1.2"

# Benchmark dependencies
criterion = "0.7"
rand = "0.9"
rand_pcg = "0.9"

[[bench]]
name = "main"
harness = false

[profile.bench]
opt-level = 3
debug = 2
debug-assertions = false
lto = "thin"
codegen-units = 1
