[package]
name = "samaku"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Node-based editor for typesetting of ASS subtitles"
repository = "https://github.com/meew0/samaku"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["ass", "subtitle"]
categories = ["multimedia"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# GUI
iced = { version = "0.14.0", features = [
    "lazy",
    "image",
    "advanced",
    "smol",
    "svg",
] }
iced_aw = { version = "0.13.1", features = ["menu", "selection_list"] }
iced_fonts = { version = "0.3.0", features = ["bootstrap"] }
iced_nodegraph = { git = "https://github.com/tuco86/iced_nodegraph.git", rev = "e4dd909680a1f668b6cbc0150d5c5c84cbe473c2" }
rfd = "0.17.2"
smol = "2.0"

# Media libraries
ffms2-sys = "0.3"
libass-sys = { version = "0.1.0", path = "libass-sys" }
libmv-capi-sys = "0.1"
matroska-demuxer = "0.7"
cpal = "0.17"

# FFI utilities
libc = "0.2.183"
vsprintf = "2.0.0"
static_assertions = "1.1.0"

# Various data structures and utilities
regex = "1.12"
interavl = "0.5"
indexmap = "2.13"
fast-float2 = "0.2"

# dtolnay collection
thiserror = "2.0"
anyhow = "1.0"
inventory = "0.3"
dyn-clone = "1.0"

# Serialization & deserialization
serde = "1.0.228"
typetag = "0.2.21"
ciborium = "0.2.2"
data-encoding = "2.10"
data-encoding-macro = "0.1.19"
miniz_oxide = "0.9"

[dev-dependencies]

# Test dependencies
assert_matches2 = "0.1.2"

# Benchmark dependencies
criterion = "0.8"
rand = "0.10"
rand_pcg = "0.10"

[[bench]]
name = "main"
harness = false

[profile.bench]
opt-level = 3
debug = 2
debug-assertions = false
lto = "thin"
codegen-units = 1
